Update aerospike-graph-gremlin/src/main/java/com/aerospike/firefly/structure/FireflyGraph.java
Co-authored-by: Lyndon Bauto <lyndonb@apache.org>