@@ -239,12 +239,7 @@ public class FireflyGraph implements Graph, WrappedGraph<AerospikeConnection> {
         SindexServiceBase.registerSindexServices(this);
         if (conf.containsKey(ConfigurationHelper.Keys.PLUGIN)) {
             final String pluginConfigString = conf.getString(ConfigurationHelper.Keys.PLUGIN);
-            final List<String> plugins;
-            if (pluginConfigString.contains(",")) {
-                plugins = Arrays.asList(pluginConfigString.split(","));
-            } else {
-                plugins = List.of(pluginConfigString);
-            }
+           final List<String> plugins = Arrays.asList(pluginConfigString.split(","));
             for (String plugin : plugins) {
                 PluginUtil.loadPlugin(plugin, conf, this);
             }
